Opened 18 months ago
Closed 18 months ago
#11468 closed defect (fixed)
[Regression] HEVC decoding error for those of image based subtitles
| Reported by: | planetrocky | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | ffmpeg |
| Version: | git-master | Keywords: | hevc |
| Cc: | MasterQuestionable | Blocked By: | |
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | yes |
Description
Summary of the bug:
How to reproduce:
% ffmpeg -i input.mp4 output.mp4 % ffmpeg -i input.mp4 -an -dn -sn output.mp4 % ffmpeg -i input.mkv output.mkv % ffmpeg -i input.mkv -an -dn -sn output.mkv
ffmpeg versions built since approximately 2025-02-02 git master are broken;
ffmpeg-2025-01-22-git-e20ee9f9ae works and processes all the file that fail above (I have about 40x files that break).
Log attached shows log from -report, the error logs extracted here:
` sh
[vist#0:0/hevc @ 000001e7847c7b00] [dec:hevc @ 000001e7847c4280] Error processing packet in decoder: File exists
[vist#0:0/hevc @ 000001e7847c7b00] [dec:hevc @ 000001e7847c4280] Task finished with error code: -17 (File exists)
[vist#0:0/hevc @ 000001e7847c7b00] [dec:hevc @ 000001e7847c4280] Terminating thread with return code -17 (File exists)
[vost#0:0/libx264 @ 000001e78483c300] [enc:libx264 @ 000001e785216b00] Could not open encoder before EOF
[vost#0:0/libx264 @ 000001e78483c300] Task finished with error code: -22 (Invalid argument)
[vost#0:0/libx264 @ 000001e78483c300] Terminating thread with return code -22 (Invalid argument)
[out#0/matroska @ 000001e7847c7e80] Nothing was written into output file, because at least one of its streams received no packets.
`
Attachments (3)
Change History (6)
by , 18 months ago
| Attachment: | ffmpeg-20250213-225306.log added |
|---|
by , 18 months ago
| Attachment: | ffmpeg-20250213-231440.log added |
|---|
ffmpeg -i Sample.mkv output.mkv breaks with same erorr on the 1-second sample attached
comment:1 by , 18 months ago
I have multiple users also experiencing this issue and confirmed that it is caused with a HEVC video with image based subtitles. Another example video in thread:
comment:2 by , 18 months ago
| Analyzed by developer: | set |
|---|---|
| Cc: | added |
| Component: | undetermined → avcodec |
| Keywords: | hevc added |
| Summary: | HEVC parsing breaks on some files "Error processing packet in decoder: File exists" → [Regression] HEVC decoding error for those of image based subtitles |
comment:3 by , 18 months ago
| Component: | avcodec → ffmpeg |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Fixed in 8e6032990cdad1d8455ffd24d4fec20fcc78a3e2.



ffmpeg report