fftools/ffmpeg_dec.c
@@ -788,10 +788,14 @@ static int packet_decode(DecoderPriv *dp, AVPacket *pkt, AVFrame *frame)
 
         frame->time_base = dec->pkt_timebase;
 
-        ret = clone_side_data(&frame->side_data, &frame->nb_side_data,
-                              dec->decoded_side_data, dec->nb_decoded_side_data, 0);
-        if (ret < 0)
-            return ret;
+        for (int i = 0; i < dec->nb_decoded_side_data; i++) {
+            const AVFrameSideData *src = dec->decoded_side_data[i];
+            if (av_frame_side_data_get(frame->side_data, frame->nb_side_data, src->type))
+                continue;
+            ret = av_frame_side_data_clone(&frame->side_data, &frame->nb_side_data, src, 0);
+            if (ret < 0)
+                return ret;
+        }
 
         if (dec->codec_type == AVMEDIA_TYPE_AUDIO) {
             dp->dec.samples_decoded += frame->nb_samples;
